# router

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml
bird/: peer_template.conf  router.conf
configs/: .gitignore  peers copy.json  peers.json  wg_pubkey
docker/: Caddyfile  crontab  start.sh
ff-router-gen/: Cargo.toml
ff-router-gen/src/: generate.rs  main.rs
ff-router-gen/src/generators/: gateway_wg_config.rs  global_bird_config.rs  mod.rs  non_ll_peer_wg_config.rs  peer_bird_config.rs  peer_wg_config.rs
ff-router-gen/src/model/: mod.rs  peer.rs  router.rs
scripts/: bird_peers_to_json.py  cron_bird_peers.sh  wg-quick-all.sh
