[package]
name = "ff-router-gen"
publish = false
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
indoc = "1.0"
